objects/retriveobject__c.object
<CustomObject>
    <fields>
        <fullName>test1__c</fullName>
        <label>test1</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test2__c</fullName>
        <label>test2</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test3__c</fullName>
        <label>test3</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <label>retriveobject</label>
    <nameField>
        <label>retriveobject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>retriveobjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>